fix: change footer heigth on small screens to try and fix footer line issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -780,7 +780,7 @@ figcaption a {
     /* Footer for small screens */
 
     footer {
-        height: 200px;
+        height: 250px;
     }
 
     .signup-footer {
